--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=x, initial-scale=1.0">
-    <title>Document</title>
+    <title>My portfolio</title>
+    <link rel="stylesheet" href="estilos/desktop.css" media="(min-width: 600px) and (max-width: 1900px)">
+    <link rel="stylesheet" href="estilos/mobile-first.css" media="(max-width: 600px)">
+    <script defer src="js-arquivos/interacoes-desktop.js"></script>
+    <script defer src="js-arquivos/interacoes-mobile.js"></script>
 </head>
 <body>
     
