--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <script defer src="js-arquivos/interacoes-mobile.js"></script>
 </head>
 <body>
-    <nav>
+    <nav id="principal">
         <span id="menu-mobile">
-            <div id="line"></div>
-            <div id="line"></div>
-            <div id="line"></div>
+            <div class="line"></div>
+            <div class="line"></div>
+            <div class="line"></div>
         </span>
         <nav id="list">
             <ul id="list-options">
@@ -30,7 +30,9 @@
             <!-- Aqui vai a foto pessoal -->
         </div>
         <p>
-            <em>Leonardo Henrique</em>, 19 anos
+            <em>Leonardo Henrique</em>, 
+            <br>
+            19 anos
         </p>
         <p>
             Atualmente com foco no mercado de Front-End 
