--- a/index.html
+++ b/index.html
@@ -18,122 +18,29 @@
         </span>
         <nav id="list">
             <ul id="list-options">
-                <li>Sobre</li>
-                <li>Currículo</li>
-                <li>Pórtifolio</li>
-                <li>Mídias Digitais</li>
+                <li>
+                    <img src="midias/icons/home-icon.svg" id="icon-home" class="icons">
+                    <p>Home</p>
+                </li>
+                <li>
+                    <img src="midias/icons/curriculo-icon.svg" id="icon-curriculo" class="icons">
+                    <p>Currículo</p>
+                </li>
+                <li>
+                    <img src="midias/icons/projeto-icon.svg" id="icon-portifolio" class="icons"> 
+                    <p>Pórtifolio</p>
+                </li>
+                <li>
+                    <img src="midias/icons/linkedin-icon.png" id="icon-linkedin" class="icons">
+                    <p>Linkedin</p>
+                </li>
+                <li>
+                    <img src="midias/icons/github-icon.svg" id="github-icon" class="icons">
+                    <p>GitHub</p>
+                </li>
             </ul>
         </nav>
     </nav>
-   <header>
-        <div id="imagem-header">
-            <!-- Aqui vai a foto pessoal -->
-        </div>
-        <p>
-            <em>Leonardo Henrique</em>, 
-            <br>
-            19 anos
-        </p>
-        <p>
-            Atualmente com foco no mercado de Front-End 
-            <br>
-            Com foco em full-stack
-        </p>
-   </header>
-   <main id="principal">
-        <main id="sobre">
-            <h1>
-                Quem sou eu
-            </h1>
-            <article id="descricao-pessoal">
-                <p>
-                    Olá, me chamo Leonardo Henrique Damasceno, tenho 19 anos sou manauara. Estou a 3 meses na area de progamação, atualmente estou estudando tecnologias da area de front-end, pórem tenho como objetivo a area full-stack.
-                </p>
-                <div id="sobre-foto-1">
-                    <!-- Aqui vai uma foto pessoal -->
-                </div>
-            </article>
-            <article id="descricao-profissional-academica">
-                <p>
-                    Sou novo no mercado e tenho como objetivo conforme dito anteriormente, o mercado full-stack, atualmente estou estudando um curso técnico de informatica, e já tenho conhecimento em HTML, CSS e JavaScript bem como, alguns projetos em produção.  
-                </p>
-                <div id="sobre-foto-2">
-                    <!-- Aqui vai uma foto imagem  -->
-                </div>
-            </article>
-        </main>
-        <main id="curriculo">
-            <h1>
-                Leonardo Henrique Damasceno da Costa
-            </h1>
-            <div id="foto-curriculo">
-                <!-- Aqui vai uma foto do curriculo -->
-            </div>
-            <p>
-                Brasileiro, 19 anos
-                <br>
-                Av. Nhamundá, 10 - Praça 14 de Janeiro
-                <br>
-                CEP: 69020-190
-                <br>
-                Fone: (92) 9 9234-5446
-                <br>
-                Email: leohencosta18@gmail.com 
-            </p>
-            <h2>
-                Competências
-            </h2>
-            <p>
-                Tenho como qualidades a capacidade de adaptação e lógica, tendo eficiência e qualidade em trabalhos em equipes. 
-            </p>
-            <h2>
-                Formações Academicas
-            </h2>
-            <p>
-                <ul>
-                    <li>Ensino Media completo</li>
-                    <li>Cursando Técnico de Informatica</li>
-                    <li>Cursando JavaScript</li>
-                </ul>
-            </p>
-            <nav>
-                <a href="#">PDF Download</a>
-            </nav>
-        </main>
-        <main id="My Projetcs">
-            <nav id="projects">
-                <ul>
-                    <li>
-                        Projeto Cordel
-                    </li>
-                    <li>
-                       Projeto Redes Sociais
-                    </li>
-                    <li>
-                        Projeto Customizando Sites
-                    </li>
-                    <li>
-                        Projeto Historia do Android
-                    </li>
-                </ul>
-            </nav> 
-            <article id="exibicao-projeto">
-                <p id="descricao-projeto">
-                    <!-- texto será inserido via JS -->
-                </p>
-                <div id="foto-projeto">
-                    <!-- Aqui vai a foto do projeto -->
-                </div>
-                <ul id="links">
-                    <li>
-                        <a href="#">GitHub</a>
-                    </li>
-                    <li>
-                        <a href="#">Site do projeto</a>
-                    </li>
-                </ul>
-            </article>
-        </main>
-   </main>
+  
 </body>
 </html>
