--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=x, initial-scale=1.0">
@@ -41,6 +41,27 @@
             </ul>
         </nav>
     </nav>
-  
+    <header>
+        <div id="img-d">
+            <img src="midias/avatar/avatar.svg" id="img">
+        </div>
+
+        <p>
+            Olá, meu nome e Leonardo Henrique
+            estou atualmente no mercado de front-end pórem pretendo aprimorar meus conhecimentos para ingressar no mercado full-stack.
+        </p>
+        <p>
+            Future developer full-stack
+        </p>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+        <img src="midias/icons/gmail-icon.png" id="gmail-icon" class="icons">
+        <p>
+            gmail
+        </p>
+    </footer>
 </body>
 </html>
