--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
 
     </main>
     <footer>
+        <p>
+            Contato ⟹
+        </p>
         <img src="midias/icons/gmail-icon.png" id="gmail-icon" class="icons">
         <p>
             gmail
