--- a/index.html
+++ b/index.html
@@ -20,28 +20,34 @@
             <ul id="list-options">
                 <li>
                     <img src="midias/icons/home-icon.svg" id="icon-home" class="icons">
-                    <p>Home</p>
+                    <a href="#">
+                        Home
+                    </a>
                 </li>
                 <li>
                     <img src="midias/icons/curriculo-icon.svg" id="icon-curriculo" class="icons">
-                    <p>Currículo</p>
+                    <a href="midias/documentos/Leonardo Curriculo.docx" download="Leonardo%20Curriculo.docx">
+                        Currículo
+                    </a>
                 </li>
                 <li>
                     <img src="midias/icons/projeto-icon.svg" id="icon-portifolio" class="icons"> 
-                    <p>Pórtifolio</p>
+                    <a href="#">Pórtifolio</a>
                 </li>
                 <li>
                     <img src="midias/icons/linkedin-icon.png" id="icon-linkedin" class="icons">
-                    <p>Linkedin</p>
+                    <a href="https://www.linkedin.com/in/leonardo-henrique-b82852197/" target="_blank">Linkedin</a>
                 </li>
                 <li>
                     <img src="midias/icons/github-icon.svg" id="github-icon" class="icons">
-                    <p>GitHub</p>
+                    <a href="https://github.com/leonardohenriquedc" target="_blank">
+                        GitHub
+                    </a>
                 </li>
             </ul>
         </nav>
     </nav>
-    <header>
+    <header id="header">
         <div id="img-d">
             <img src="midias/avatar/avatar.svg" id="img">
         </div>
@@ -54,8 +60,38 @@
             Future developer full-stack
         </p>
     </header>
-    <main>
-
+    <main id="main">
+        <section>
+            <div id="tela-de-login">
+                <!-- Aqui vai uma foto do projeto: Tela de login -->
+            </div>
+            <p>
+                Projeto tela de login, feita como parte inicial do aprendizado de responsividade, neste projeto, houve o uso básico de tecnologias atuais no caso, flexbox.  
+            </p>
+            <a href="#">GitHub</a>
+        </section>
+        <section>
+            <div id="cr-de-tecnologia">
+                <!-- Aqui vai uma foto do projeto: Curiosidade de tecnologia -->
+                <img src="midias/imagens/imagens-projetos/tela-1-pj-cr-de-tecnologia.PNG">
+                <img src="midias/imagens/imagens-projetos/tela-2-pj-cr-de-tecnologia.PNG"">
+                <img src="midias/imagens/imagens-projetos/tela-3-pj-cr-de-tecnologia.PNG"">
+                <img src="midias/imagens/imagens-projetos/tela-4-pj-cr-de-tecnologia.PNG">
+            </div>
+            <p>
+                Foi um projeto inicial como foco o uso de conhecimentos basicos de HTML e CSS, não houve o uso de tecnologias recentes como, grid layout ou flexbox.
+            </p>
+            <a href="#">GitHub</a>
+        </section>
+        <section>
+            <div id="redes-sociais">
+                <!-- Aqui vai uma foto do projeto: Redes Sociais -->
+            </div>
+            <p>
+                Neste projeto houve o uso básico de JavaScript, pra fins de interação.
+            </p>
+            <a href="#">GitHub</a>
+        </section>
     </main>
     <footer>
         <p>
