--- a/index.html
+++ b/index.html
@@ -16,29 +16,29 @@
             <div class="line"></div>
             <div class="line"></div>
         </span>
-        <nav id="list">
+        <nav id="list" style="display: none;">
             <ul id="list-options">
-                <li>
+                <li id="bt-home">
                     <img src="midias/icons/home-icon.svg" id="icon-home" class="icons">
                     <a href="#">
                         Home
                     </a>
                 </li>
-                <li>
+                <li id="bt-curriculo">
                     <img src="midias/icons/curriculo-icon.svg" id="icon-curriculo" class="icons">
                     <a href="midias/documentos/Leonardo Curriculo.docx" download="Leonardo%20Curriculo.docx">
                         Currículo
                     </a>
                 </li>
-                <li>
+                <li id="bt-portifolio">
                     <img src="midias/icons/projeto-icon.svg" id="icon-portifolio" class="icons"> 
                     <a href="#">Pórtifolio</a>
                 </li>
-                <li>
+                <li id="bt-linkedin">
                     <img src="midias/icons/linkedin-icon.png" id="icon-linkedin" class="icons">
                     <a href="https://www.linkedin.com/in/leonardo-henrique-b82852197/" target="_blank">Linkedin</a>
                 </li>
-                <li>
+                <li id="bt-curriculo">
                     <img src="midias/icons/github-icon.svg" id="github-icon" class="icons">
                     <a href="https://github.com/leonardohenriquedc" target="_blank">
                         GitHub
@@ -47,7 +47,7 @@
             </ul>
         </nav>
     </nav>
-    <header id="header">
+    <header id="header" style="display: grid;">
         <div id="img-d">
             <img src="midias/avatar/avatar.svg" id="img">
         </div>
@@ -60,7 +60,7 @@
             Future developer full-stack
         </p>
     </header>
-    <main id="main">
+    <main id="main" style="display: none;">
         <section>
             <div id="tela-de-login">
                 <!-- Aqui vai uma foto do projeto: Tela de login -->
