--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
             estou atualmente no mercado de front-end pórem pretendo aprimorar meus conhecimentos para ingressar no mercado full-stack.
         </p>
         <p>
+            No momento estou aprimorando minhas tecnicas de construção de landpages, afim de construir um portfolio bem como também experiência no mercado.
+        </p>
+        <p>
             Future developer full-stack
         </p>
     </header>
@@ -68,7 +71,7 @@
             <p>
                 Projeto tela de login, feita como parte inicial do aprendizado de responsividade, neste projeto, houve o uso básico de tecnologias atuais no caso, flexbox.  
             </p>
-            <a href="#">GitHub</a>
+            <a href="https://github.com/leonardohenriquedc/projeto-tela-de-login" target="_blank">GitHub</a>
         </section>
         <section>
             <div id="cr-de-tecnologia">
@@ -81,7 +84,7 @@
             <p>
                 Foi um projeto inicial como foco o uso de conhecimentos basicos de HTML e CSS, não houve o uso de tecnologias recentes como, grid layout ou flexbox.
             </p>
-            <a href="#">GitHub</a>
+            <a href="https://github.com/leonardohenriquedc/projeto1" target="_blank">GitHub</a>
         </section>
         <section>
             <div id="redes-sociais">
@@ -90,7 +93,7 @@
             <p>
                 Neste projeto houve o uso básico de JavaScript, pra fins de interação.
             </p>
-            <a href="#">GitHub</a>
+            <a href="https://github.com/leonardohenriquedc/projeto-social1" target="_blank">GitHub</a>
         </section>
     </main>
     <footer>
