--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>My portfolio</title>
     <link rel="stylesheet" href="estilos/desktop.css" media="(min-width: 601px)">
     <link rel="stylesheet" href="estilos/mobile-first.css" media="(max-width: 600px)">
-    <script defer src="js-arquivos/interacoes-desktop.js"></script>
     <script defer src="js-arquivos/interacoes-mobile.js"></script>
+    <script defer type="module" src="js-arquivos/interacoes-desktop.js"></script>
 </head>
 <body>
-    <nav id="principal"  class="">
+    <nav id="principal"  class="entreSeisNove">
         <span id="menu-mobile">
             <div class="line"></div>
             <div class="line"></div>
@@ -51,7 +51,7 @@
             </ul>
         </nav>
     </nav>
-    <header id="header">
+    <header id="header" style="display: grid;">
         <div id="img-d">
             <img src="midias/avatar/avatar.svg" id="img">
         </div>
@@ -69,7 +69,7 @@
             </p>
         </div>
     </header>
-    <main id="main" style="display: none;">
+    <main id="main" style="display: none;" class="">
         <section>
             <div id="tela-de-login">
                 <!-- Aqui vai uma foto do projeto: Tela de login -->
