--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </li>
                 <li id="bt-curriculo" class="button" >
                     <img src="midias/icons/curriculo-icon.svg" id="icon-curriculo" class="icons">
-                    <a href="#" <!-- download="Leonardo%20Curriculo.docx" --> class="name">
+                    <a href="#" class="name">
                         Currículo
                     </a>
                 </li>
