--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             <div class="line"></div>
             <div class="line"></div>
         </span>
-        <nav id="list" style="display: none;">
+        <nav id="list" style="display: grid;" class="listClassOff">
             <ul id="list-options">
-                <li id="bt-home" class="" >
+                <li id="bt-home" class="button" >
                     <img src="midias/icons/home-icon.svg" id="icon-home" class="icons">
                     <a href="#" class="name">
                         Home
