--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="line"></div>
             <div class="line"></div>
         </span>
-        <nav id="list" style="display: grid;" class="listClassOff">
+        <nav id="list" style="display: none;" >
             <ul id="list-options">
                 <li id="bt-home" class="button" >
                     <img src="midias/icons/home-icon.svg" id="icon-home" class="icons">
